src/ui/snapshots/lazydatabricks__ui__tests__mono_theme_80x24.snap
---
source: src/ui/mod.rs
expression: render(&app)
---
"┌─[1]─Status──────────────┐┌─[0]─Runs - Detail ⠋───────────────────────────────┐"
"│◐ dev → adb-1.azuredatabr││  Run ID           Started      Duration  Result   │"
"│3 of 3 jobs · 0s ago     ││› 50851892761075   01.09 10:08  2h00m     ◐ RUNNING│"
"└─────────────────────────┘│  50851892761073   31.08 10:08  1m12s     ✓ SUCCESS│"
"╔─[2]─Jobs by activity════╗│  50851892761074   30.08 10:08  57s       ✗ FAILED │"
"║ 2h ◐ [someone] okonomi_…║│                                                   │"
"║ 1d ✗ nightly_bronze_ing…║│                                                   │"
"║    · weekly_report      ║│                                                   │"
"║                         ║│                                                   │"
"╚═══════════════════1 of 3╝│                                                   │"
"┌─[3]─Pipelines ⠋ by activ┐│                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         │└───────────────────────────────────────────────────┘"
"└───────────────────0 of 0┘┌─API log───────────────────────────────────────────┐"
"┌─[4]─Clusters ⠋──────────┐│GET  /api/2.2/jobs/list?limit=25        200    84ms│"
"│                         ││GET  /api/2.2/jobs/runs/list?job_id=1&… 200   131ms│"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────0 of 0┘└───────────────────────────────────────────────────┘"
" Move: j/k │ Filter: / │ Mine: m │ Status: f │ Actions: x │ Quit: q │ Keys: ?   "
