src/ui/snapshots/lazydatabricks__ui__tests__nerd_font_icons_80x24.snap
---
source: src/ui/mod.rs
expression: render(&app)
---
"┌─[1]─Status──────────────┐┌─[0]─Runs - Detail - JSON - Output ⠋───────────────┐"
"│◐ dev → adb-1.azuredatabr││Name           [someone] okonomi_gold              │"
"│3 of 3 jobs · 0s ago     ││Job ID         1                                   │"
"│◐ 1 · ✗ 1 · ● 0          ││Creator        someone@example.com                 │"
"└─────────────────────────┘│Run as         someone@example.com                 │"
"┌─[2]─Jobs by activity────┐│Format         MULTI_TASK                          │"
"│ 2h ◐ [someone] okonomi_…││Max concurrent 4                                   │"
"│ 1d ✗ nightly_bronze_ing…││Timeout        2h00m                               │"
"│    · weekly_report      ││Tags           dev=someone domain=okonomi          │"
"│                         ││Schedule       0 0 2 * * ? Europe/Oslo             │"
"│                         ││Deployment     BUNDLE /Workspace/Users/someone@exam│"
"│                         ││Edit mode      UI_LOCKED                           │"
"│                         ││                                                   │"
"└───────────────────1 of 3┘│Task                     Type                      │"
"┌─[3]─Pipelines ⠋ by activ┐│v1compat                  python src/v1compat.py  │"
"│                         │└───────────────────────────────────────────────────┘"
"│                         │┌─API log───────────────────────────────────────────┐"
"│                         ││GET  /api/2.2/jobs/list?limit=25        200    84ms│"
"└───────────────────0 of 0┘│GET  /api/2.2/jobs/runs/list?job_id=1&… 200   131ms│"
"┌─[4]─Compute ⠋───────────┐│                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────0 of 0┘└───────────────────────────────────────────────────┘"
" Move: j/k │ Filter: / │ Mine: m │ Status: f │ Actions: x │ Quit: q │ Keys: ?   "
