src/ui/snapshots/lazydatabricks__ui__tests__no_jobs_80x24.snap
---
source: src/ui/mod.rs
expression: render(&app)
---
"┌─[1]─Status──────────────┐┌─[0]─Runs - Detail─────────────────────────────────┐"
"│◐ dev → adb-1.azuredatabr││                                                   │"
"│0 of 0 jobs · 0s ago     ││                                                   │"
"└─────────────────────────┘│                                                   │"
"┌─[2]─Jobs by activity────┐│                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────0 of 0┘│                                                   │"
"┌─[3]─Pipelines ⠋ by activ┐│                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         │└───────────────────────────────────────────────────┘"
"└───────────────────0 of 0┘┌─API log───────────────────────────────────────────┐"
"┌─[4]─Compute ⠋───────────┐│                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────0 of 0┘└───────────────────────────────────────────────────┘"
" Move: j/k │ Filter: / │ Mine: m │ Status: f │ Actions: x │ Quit: q │ Keys: ?   "
