src/ui/snapshots/lazydatabricks__ui__tests__paused_job_row_80x24.snap
---
source: src/ui/mod.rs
expression: render(&app)
---
"┌─[1]─Status──────────────┐┌─[0]─Runs - Detail - JSON - Output ⠋───────────────┐"
"│◐ dev → adb-1.azuredatabr││                                                   │"
"│3 of 3 jobs · 0s ago     ││                                                   │"
"│◐ 1 · ✗ 1 · ● 0          ││                                                   │"
"└─────────────────────────┘│                                                   │"
"┌─[2]─Jobs by activity────┐│                                                   │"
"│ 2h ◐ [someone] okonomi_…││                                                   │"
"│ 1d ✗ ‖ nightly_bronze_i…││                                                   │"
"│    · weekly_report      ││                                                   │"
"│                ┌ Actions ───────────────────────────────────┐                │"
"│                │Run now: nightly_bronze_ingest              │                │"
"│                │Run with parameters: nightly_bronze_ingest  │                │"
"│                │Resume schedule: nightly_bronze_ingest      │                │"
"└────────────────│Delete job: nightly_bronze_ingest           │                │"
"┌─[3]─Pipelines ⠋└────read-only: --allow-actions to enable────┘                │"
"│                         │└───────────────────────────────────────────────────┘"
"│                         │┌─API log───────────────────────────────────────────┐"
"│                         ││GET  /api/2.2/jobs/list?limit=25        200    84ms│"
"└───────────────────0 of 0┘│GET  /api/2.2/jobs/runs/list?job_id=1&… 200   131ms│"
"┌─[4]─Compute ⠋───────────┐│                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────0 of 0┘└───────────────────────────────────────────────────┘"
" Choose: j/k │ Confirm: Enter │ Close: Esc                                v0.0.0"
