src/ui/snapshots/lazydatabricks__ui__tests__pipelines_detail_tab_80x24.snap
---
source: src/ui/mod.rs
expression: render(&app)
---
"┌─[1]─Status──────────────┐┌─[0]─Updates - Detail ⠋────────────────────────────┐"
"│◐ dev → adb-1.azuredatabr││Name           [someone] felles_gold               │"
"│1 of 1 pipelines · 0s ago││Pipeline ID    2b8e9c4d-3f2a-4e1b-9c7d-6a5b4c3d2e1f│"
"└─────────────────────────┘│State          IDLE                                │"
"┌─[2]─Jobs by activity────┐│Creator        someone@example.com                 │"
"│ 2h ◐ [someone] okonomi_…││Updates        1                                   │"
"│ 1d ✗ nightly_bronze_ing…││                                                   │"
"│    · weekly_report      ││                                                   │"
"│                         ││                                                   │"
"└───────────────────1 of 3┘│                                                   │"
"┌─[3]─Pipelines by activit┐│                                                   │"
"│ 5d ✓ [someone] felles_g…││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         │└───────────────────────────────────────────────────┘"
"└───────────────────1 of 1┘┌─API log───────────────────────────────────────────┐"
"┌─[4]─Clusters ⠋──────────┐│GET  /api/2.2/jobs/list?limit=25        200    84ms│"
"│                         ││GET  /api/2.2/jobs/runs/list?job_id=1&… 200   131ms│"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────0 of 0┘└───────────────────────────────────────────────────┘"
" Move: j/k │ Filter: / │ Mine: m │ Status: f │ Actions: x │ Quit: q │ Keys: ?   "
