src/ui/snapshots/lazydatabricks__ui__tests__pipelines_focused_updates_tab_80x24.snap
---
source: src/ui/mod.rs
expression: render(&app)
---
"┌─[1]─Status──────────────┐┌─[0]─Updates - Detail ⠋────────────────────────────┐"
"│◐ dev → adb-1.azuredatabr││Update     Created      State                      │"
"│2 of 2 pipelines · 0s ago││ac18068b   08/26 22:40  ✓ COMPLETED                │"
"└─────────────────────────┘│                                                   │"
"┌─[2]─Jobs────────────────┐│                                                   │"
"│[someone] okonomi_gold   ││                                                   │"
"│nightly_bronze_ingest    ││                                                   │"
"│weekly_report            ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────1 of 3┘│                                                   │"
"┌─[3]─Pipelines───────────┐│                                                   │"
"│✓ [someone] felles_gold  │└───────────────────────────────────────────────────┘"
"│✓ [other] hubspot        │┌─API log───────────────────────────────────────────┐"
"│                         ││GET  /api/2.2/jobs/list?limit=25        200    84ms│"
"│                         ││GET  /api/2.2/jobs/runs/list?job_id=1&… 200   131ms│"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────1 of 2┘└───────────────────────────────────────────────────┘"
" Select: j/k │ Filter: / │ Mine: m │ Actions: x │ Quit: q │ Keys: ?       v0.1.0"
