src/ui/snapshots/lazydatabricks__ui__tests__pipelines_menu_80x24.snap
---
source: src/ui/mod.rs
expression: render(&app)
---
"┌─[1]─Status──────────────┐┌─[0]─Updates - Detail - JSON ⠋─────────────────────┐"
"│◐ dev → adb-1.azuredatabr││Update     Created      State                      │"
"│1 of 1 pipelines · 0s ago││ac18068b   26.08 22:40  ✓ COMPLETED                │"
"│◐ 1 · ✗ 1 · ● 0          ││                                                   │"
"└─────────────────────────┘│                                                   │"
"┌─[2]─Jobs by activity────┐│                                                   │"
"│ 2h ◐ [someone] okonomi_…││                                                   │"
"│ 1d ✗ nightly_bronze_ing…││                                                   │"
"│    · weekly_report      ││                                                   │"
"└───────────────────1 of 3┘│                                                   │"
"┌─[3]─Pipelines by ┌ Actions ───────────────────────────────┐                  │"
"│ 5d ✓ [someone] ak│Start update: [someone] aktorer_ingest  │                  │"
"│                  │Stop: [someone] aktorer_ingest          │                  │"
"│                  └──read-only: --allow-actions to enable──┘                  │"
"│                         ││                                                   │"
"│                         │└───────────────────────────────────────────────────┘"
"│                         │┌─API log───────────────────────────────────────────┐"
"│                         ││GET  /api/2.2/jobs/list?limit=25        200    84ms│"
"└───────────────────1 of 1┘│GET  /api/2.2/jobs/runs/list?job_id=1&… 200   131ms│"
"┌─[4]─Compute ⠋───────────┐│                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────0 of 0┘└───────────────────────────────────────────────────┘"
" Choose: j/k │ Confirm: Enter │ Close: Esc                                v0.0.0"
