src/ui/snapshots/lazydatabricks__ui__tests__portrait_50x40.snap
---
source: src/ui/mod.rs
expression: "render_at(&app, 50, 40)"
---
"┌─[1]─Status─────────────────────────────────────┐"
"│◐ dev → adb-1.azuredatabricks.net               │"
"│3 of 3 jobs · 0s ago                            │"
"│◐ 1 running · ✗ 1 failed · ● 0 compute up       │"
"└────────────────────────────────────────────────┘"
"┌─[2]─Jobs by activity───────────────────────────┐"
"│ 2h ◐ [someone] okonomi_gold                    │"
"│ 1d ✗ nightly_bronze_ingest                     │"
"│    · weekly_report                             │"
"│                                                │"
"│                                                │"
"│                                                │"
"└──────────────────────────────────────────1 of 3┘"
"┌─[3]─Pipelines ⠋ by activity────────────────────┐"
"│                                                │"
"└──────────────────────────────────────────0 of 0┘"
"┌─[4]─Compute ⠋──────────────────────────────────┐"
"│                                                │"
"│                                                │"
"└──────────────────────────────────────────0 of 0┘"
"┌─[0]─Runs - Detail ⠋────────────────────────────┐"
"│  Started      Duration  Result                 │"
"│› 01.09 10:08  2h00m     ◐ RUNNING              │"
"│  31.08 10:08  1m12s     ✓ SUCCESS              │"
"│  30.08 10:08  57s       ✗ FAILED               │"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"└────────────────────────────────────────────────┘"
"┌─API log────────────────────────────────────────┐"
"│GET  /api/2.2/jobs/list?limit=25     200    84ms│"
"│GET  /api/2.2/jobs/runs/list?job_id… 200   131ms│"
"│                                                │"
"│                                                │"
"│                                                │"
"└────────────────────────────────────────────────┘"
" Move: j/k │ Filter: / │ Mine: m │ Status: f │ Act"
